// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "executionStrategy": {
      "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "params": "0x00",
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "0.1.0",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "addy": "0x6241b5c89350bb3c465179706cf26050ea32444f",
        "params": "0x00",
      },
      "metadataURI": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userParams": "0x0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000",
    },
    "signature": "0xeb082bdf825eba431f899b1abbb27d9893a52d17160a4f8e2fc0c3274e480a9606de5ca525196d3b07f0a2ec3eefb8de21355d6ad2d331402ce2adfda60cf69f1c",
    "types": {
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataURI",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "Strategy",
        },
        {
          "name": "userParams",
          "type": "bytes",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
      "Strategy": [
        {
          "name": "addy",
          "type": "address",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 5,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "0.1.0",
    },
    "message": {
      "choice": 1,
      "proposalId": 1,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voteMetadataURI": "",
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0xa7fb4c6206515c60d78ad09d625ed7794be5d45c5956fd78682c200e8e07d17143877bd7b7061d5667ecfc3f7784d9a522f3a9ccb10cfa05d49b0e8071a0a5131c",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "voteMetadataURI",
          "type": "string",
        },
      ],
    },
  },
}
`;
